src/components/styles/headingStyle.css
.heading_tier-zero,
.heading_tier-one,
.heading_tier-two {
  display: flex;
  flex-direction: column;
  width: fit-content;
}

.plan-type,
.plan-price,
.plan-recurrence {
  margin: 0;
  margin-bottom: 4px;
  font-weight: 300;
}

.plan-type,
.plan-recurrence {
  font-size: 12px;
  line-height: 16px;
}

.plan-price {
  font-size: 24px;
  font-weight: 700;
}

.plan-recurrence {
  color: #5f6974;
}

.heading_tier-one,
.heading_tier-one > .plan-recurrence {
  color: #fff;
}

